@@ -1,5 +1,11 @@
 2011-02-18  Tom Tromey  <tromey@redhat.com>
 
+	* common/ax.def: New file.
+	* ax.h (enum agent_op): Use ax.def.
+	* ax-general.c (aop_map): Use ax.def.
+
+2011-02-18  Tom Tromey  <tromey@redhat.com>
+
 	* ax-general.c (aop_map): Add pick and rot.
 	* dwarf2loc.c (compile_dwarf_to_ax) <DW_OP_over>: Reimplement.
 	<DW_OP_rot>: Implement.
